Fix image overflow out of restaurant container

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ nav h1 a {
   font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 5px 5px;
   text-align: left;
   width: 270px;
 }
